Fix missing padding at start of page

--- a/src/style/layout.css
+++ b/src/style/layout.css
@@ -17,8 +17,4 @@
     padding-top: 1.25rem;
     background-image: linear-gradient(180deg, rgba(0 0 0 / 0.035), transparent 25%);
   }
-
-  &:last-child {
-    padding-block-end: 1.25rem;
-  }
 }
