--- a/src/style/util.css
+++ b/src/style/util.css
@@ -18,6 +18,15 @@
   margin-block-start: 0.5rem;
 }
 
+/* Usually a stack just has space between the children. If you add this, the last item gets
+*padding* below too. That's needed full height pages there the padding on the page will not be
+scrolled into view if it overflow, so we need padding on the last layout item to add that space.
+Still using this instead of margin on top and bottom to ensure it works even when margin collapse is
+prevented, plus margins will NOT be scrolled to in an overflow of the page. */
+.stack--trail > *:last-child {
+  padding-block-end: 1.125rem;
+}
+
 .block {
   display: block;
 }
@@ -90,6 +99,6 @@
   height: 1px;
 }
 
-.mb-4 {
-  margin-block: 1rem;
+.mt-4 {
+  padding-block-start: 1rem;
 }
